--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
+    "chart.js": "^4.2.0",
     "lottie-web": "^5.10.2",
     "react": "^18.2.0",
     "react-alert": "^7.0.3",
     "react-bootstrap": "^2.7.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-lottie": "^1.2.3",
@@ -47,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "faker": "^5.5.3",
     "tailwindcss": "^3.2.4"
   }
 }
